# gayshin-start

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker_launch.sh  linux_subscribe.example.sh  subscribe.example.json  windows_launch.example.bat  windows_subscribe.example.bat
install/: clash.install.py  clash.service  clash.subscribe.sh  clash.timer  install.py  util.py
scripts/: data.py  main.py  reader_clash.py  reader_subs.py  reader_vmess.py  utils.py  writer_clash.py  writer_singbox.py
settings/: settings.toml
src/: main.rs  reader.rs  settings.rs
src/extdata/: clash.rs  mod.rs
templates/: config.singbox.template.json  config.template.example.yaml  config.template.yaml.bk
