[package]
name = "proxy-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "^2.11"
case_insensitive_string = "0.2.10"
clap = { version = "^4.5", features = ["derive"] }
serde = "^1.0"
serde_yaml = "0.9.34"
subconverter = "0.2.34"
tokio = { version = "^1.47", features = ["rt", "net", "fs"] }
toml = "0.9.7"
